make parent more generic